examples/gitops/guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
  namespace: guestbook
spec:
  ingressClassName: traefik
  rules:
  - host: guestbook.tst.k8s.mycompany.com
    http:
      paths:
      - backend:
          service:
            name: guestbook-ui
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
